Fixing overflow-x and cursor: pointer styles for autocomplete

--- a/css/jquery.autocomplete.css
+++ b/css/jquery.autocomplete.css
@@ -19,6 +19,7 @@
 	/* IE6 specific: */ _height:350px;
 	 _margin:0;
 	_overflow-x:hidden;
+	overflow-x:hidden;
 	min-width: 300px;
 	
 	background: -moz-linear-gradient(top, #406C6C, #284545);
@@ -32,6 +33,9 @@
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#192b2b', endColorstr='#0d1616');
 	background: -webkit-gradient(linear, left top, left bottom, from(#192B2B), to(#0D1616));
 	background: -moz-linear-gradient(top, #192B2B, #0D1616);
+}
+.autocomplete div:hover {
+	cursor: pointer;
 }
 .autocomplete div {
 	padding:2px 5px;
